--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kanban Board</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/modal.css">
 </head>
 <body>
- <h1>Hi</h1>
+<div class="app-container">
+    <header class="app-header">
+        <h1>Kanban Board</h1>
+        <button id="addColumnBtn" class="btn btn-primary">Add Column</button>
+    </header>
+
+    <main class="board-container">
+        <div id="boardColumns" class="board-columns">
+            <!-- Columns will be added here dynamically -->
+        </div>
+    </main>
+</div>
+
+<!-- Modal Template -->
+<div id="modal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <div id="modalBody"></div>
+    </div>
+</div>
+
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
