User management added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 <body>
 <div class="app-container">
+    <div class="user-section">
+        <div id="currentUser"></div>
+        <button id="loginBtn" class="btn btn-primary">Login</button>
+    </div>
+
     <header class="app-header">
         <h1>Kanban Board</h1>
         <button id="addColumnBtn" class="btn btn-primary">Add Column</button>
