Register User added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="app-container">
     <div class="user-section">
         <div id="currentUser"></div>
+        <button id="registerBtn" class="btn btn-outline-primary">Register</button>
         <button id="loginBtn" class="btn btn-primary">Login</button>
     </div>
 
